# Xdog

./: README.md
pigot_description/urdf/: pigot.gazebo  pigot_body_model.xacro  pigot_model.xacro  pigot_trans.xacro
pigot_gazebo/launch/: pigot_world.launch
xdog_control /: CMakeLists.txt  package.xml
xdog_control /config/: xdog_control.yaml
xdog_control /launch/: xdog_control.launch
xdog_description/: CMakeLists.txt  package.xml
xdog_description/config/: joint_names_xdog_description.yaml
xdog_description/launch/: display.launch
xdog_description/meshes/: Link_11.STL  Link_12.STL  Link_21.STL  Link_22.STL  Link_31.STL  Link_32.STL  Link_41.STL  Link_42.STL  body_link.STL
xdog_description/urdf/: xdog.gazebo  xdog.urdf  xdog.urdf.xacro  xdog.xacro  xdog_trans.xacro
xdog_gazebo/: CMakeLists.txt  package.xml
xdog_gazebo/launch/: xdog_world.launch
